The layout test fast/images/heic-as-background-image.html is a constant failure https://bugs.webkit.org/show_bug.cgi?id=228195 <rdar://80334724>

Reviewed by Said Abou-Hallawa.

Source/WebKit:

Call correct system function for required initialization.

No new tests, covered by existing test.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Source/WTF:

Add HAVE macro for the system function CMPhotoIsTileDecoderAvailable.

* wtf/PlatformHave.h:

LayoutTests:

Update test expectations.

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/239966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280318 268f45cc-cd09-0410-ab3c-d52691b4dbfc